module8/Service.yaml
apiVersion: v1
kind: Service
metadata:  
  name: httpserver 
spec:
  type: NodePort
  selector:
    app: httpserver
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30007
# 访问方式：任意节点ip:30007
# 也可以在集群外部创建负载均衡器，后端为任意节点ip，端口30007.可以多配置几个ip，以防止单节点宕机情况导致应用无法访问。
