module8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpserver
spec:
  rules:
  - host: www.httpserver.com
    http:
      paths:
      - backend:
          service:
            name: httpserver
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - www.httpserver.com
    secretName: httpserver-tls
